Employee roles addition for bulk